sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:9: error: not found: value a
    a = 0
    ^AlgCocktailSort1:14: error: not found: value a
        a = 1
        ^AlgCocktailSort1:22: error: not found: value a
        a = 1
        ^AlgCocktailSort1:27: error: not found: value a
  } while (a == 1)
           ^