sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  
  var i = 0;
  var j = 0;
  var b = getNombreValeurs();
  
  do {
    a = 0
  
    for (i <- 0 to b-2){
      if (plusPetit(i, i+1) == false) {
        echange(i, i+1);
        a = 1

      }
    }

    for (i <- b-2 to 0 by -1) {
      if (plusPetit(j, j+1) == false) {
        echange(j, j+1);
        a = 1

      }
    }
  
  } while (a == 1)
}